tests/rename/should_compile/T11164.hs
module T11164 where

import T11164b (T)
