tests/rename/should_fail/T5745a.hs
module T5745a( module T5745b ) where

import T5745b hiding( T )
